Fix form action buttons on mobile

--- a/themes/raiser/sass/_mixins.scss
+++ b/themes/raiser/sass/_mixins.scss
@@ -118,7 +118,7 @@
 }
 
 @mixin xsmall {
-  @media (max-width: 480px) {
+  @media (min-width: 320px) and (max-width: 480px) {
     @content; 
   }
 }
