--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2164,6 +2164,8 @@ footer #colophon a:hover {
   color: #989898;
   float: right;
   padding: 0.6em 1em;
+  box-sizing: border-box;
+  height: 3.125em;
 }
 /* line 50, ../sass/_mixins.scss */
 #edit-cancel:hover {
@@ -2180,24 +2182,26 @@ footer #colophon a:hover {
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  /* line 54, ../sass/components/_forms.scss */
+  /* line 56, ../sass/components/_forms.scss */
   #edit-submit, #edit-cancel {
     float: none;
     display: block;
     margin-bottom: 1em;
     text-align: center;
     width: 100%;
+    clear: both;
   }
 }
 
-/* line 66, ../sass/components/_forms.scss */
+/* line 69, ../sass/components/_forms.scss */
 #user-register-form #edit-submit,
 #user-pass #edit-submit {
   padding: 0.8em 1em;
+  float: left;
 }
 
 @media (min-width: 992px) {
-  /* line 73, ../sass/components/_forms.scss */
+  /* line 77, ../sass/components/_forms.scss */
   form[id^="redhen-campaign-page-add-form"],
   form[id^="redhen-campaign-campaign-form"],
   form[id^="redhen-campaign-campaign-page-form"] {
@@ -2208,7 +2212,7 @@ footer #colophon a:hover {
     width: 70%;
   }
 }
-/* line 78, ../sass/components/_forms.scss */
+/* line 82, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal {
@@ -2216,7 +2220,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   font-size: 1em;
   padding-left: 0em;
 }
-/* line 82, ../sass/components/_forms.scss */
+/* line 86, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal .field-prefix,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal .field-prefix {
@@ -2224,7 +2228,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   font-size: 1.375em;
   line-height: 1.75em;
 }
-/* line 87, ../sass/components/_forms.scss */
+/* line 91, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"] {
@@ -2232,21 +2236,21 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   width: 97%;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-  /* line 87, ../sass/components/_forms.scss */
+  /* line 91, ../sass/components/_forms.scss */
   form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
   form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"],
   form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal input[id^="edit-redhen-campaign-goal-und-0-value"] {
     width: 91%;
   }
 }
-/* line 95, ../sass/components/_forms.scss */
+/* line 99, ../sass/components/_forms.scss */
 form[id^="redhen-campaign-page-add-form"] .field-name-redhen-campaign-goal .description,
 form[id^="redhen-campaign-campaign-form"] .field-name-redhen-campaign-goal .description,
 form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal .description {
   clear: both;
 }
 
-/* line 105, ../sass/components/_forms.scss */
+/* line 109, ../sass/components/_forms.scss */
 #edit-field-start-date,
 #edit-field-end-date,
 .main-content-wrapper .field-name-field-end-date,
@@ -2257,7 +2261,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   margin-top: 0;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-  /* line 105, ../sass/components/_forms.scss */
+  /* line 109, ../sass/components/_forms.scss */
   #edit-field-start-date,
   #edit-field-end-date,
   .main-content-wrapper .field-name-field-end-date,
@@ -2265,7 +2269,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     clear: left;
     width: 100%;
   }
-  /* line 114, ../sass/components/_forms.scss */
+  /* line 118, ../sass/components/_forms.scss */
   #edit-field-start-date input[type=text],
   #edit-field-end-date input[type=text],
   .main-content-wrapper .field-name-field-end-date input[type=text],
@@ -2273,7 +2277,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     width: 100%;
   }
 }
-/* line 117, ../sass/components/_forms.scss */
+/* line 121, ../sass/components/_forms.scss */
 #edit-field-start-date fieldset,
 #edit-field-end-date fieldset,
 .main-content-wrapper .field-name-field-end-date fieldset,
@@ -2282,7 +2286,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   padding: 0;
   margin: 0;
 }
-/* line 122, ../sass/components/_forms.scss */
+/* line 126, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .date-padding,
 #edit-field-end-date .container-inline-date .date-padding,
 .main-content-wrapper .field-name-field-end-date .container-inline-date .date-padding,
@@ -2290,7 +2294,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   padding: 0;
   width: 100%;
 }
-/* line 126, ../sass/components/_forms.scss */
+/* line 130, ../sass/components/_forms.scss */
 #edit-field-start-date .container-inline-date .form-item,
 #edit-field-end-date .container-inline-date .form-item,
 .main-content-wrapper .field-name-field-end-date .container-inline-date .form-item,
@@ -2298,7 +2302,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   margin-bottom: 0;
 }
 @media (min-width: 320px) and (max-width: 480px) {
-  /* line 126, ../sass/components/_forms.scss */
+  /* line 130, ../sass/components/_forms.scss */
   #edit-field-start-date .container-inline-date .form-item,
   #edit-field-end-date .container-inline-date .form-item,
   .main-content-wrapper .field-name-field-end-date .container-inline-date .form-item,
@@ -2306,7 +2310,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
     width: 100%;
   }
 }
-/* line 132, ../sass/components/_forms.scss */
+/* line 136, ../sass/components/_forms.scss */
 #edit-field-start-date .form-item label,
 #edit-field-end-date .form-item label,
 .main-content-wrapper .field-name-field-end-date .form-item label,
@@ -2314,7 +2318,7 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   display: none;
 }
 
-/* line 138, ../sass/components/_forms.scss */
+/* line 142, ../sass/components/_forms.scss */
 .form-radio,
 .form-type-radio {
   background: none;
@@ -2346,12 +2350,12 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   border: 3px solid #90c965;
   color: white;
 }
-/* line 143, ../sass/components/_forms.scss */
+/* line 147, ../sass/components/_forms.scss */
 .form-radio input,
 .form-type-radio input {
   display: none;
 }
-/* line 146, ../sass/components/_forms.scss */
+/* line 150, ../sass/components/_forms.scss */
 .form-radio .ajax-progress-throbber,
 .form-type-radio .ajax-progress-throbber {
   position: absolute;
@@ -2360,12 +2364,12 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   left: 26%;
   font-size: 0.875em;
 }
-/* line 153, ../sass/components/_forms.scss */
+/* line 157, ../sass/components/_forms.scss */
 .form-radio label,
 .form-type-radio label {
   cursor: pointer;
 }
-/* line 156, ../sass/components/_forms.scss */
+/* line 160, ../sass/components/_forms.scss */
 .form-radio.checked,
 .form-type-radio.checked {
   background: #5e9733;
@@ -2373,13 +2377,13 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   color: white;
   cursor: default;
 }
-/* line 161, ../sass/components/_forms.scss */
+/* line 165, ../sass/components/_forms.scss */
 .form-radio.checked label,
 .form-type-radio.checked label {
   cursor: default;
 }
 
-/* line 170, ../sass/components/_forms.scss */
+/* line 174, ../sass/components/_forms.scss */
 .page-fundraise #main #content,
 .page-user #main #content,
 .page-user-edit #main #content {
@@ -3864,7 +3868,7 @@ tr.selected td {
 /* line 803, ../sass/components/_misc.scss */
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1415641739');
+  background-image: url('../images/progress.gif?1415918639');
 }
 
 /* line 1, ../sass/components/_modal.scss */
